@@ -5,8 +5,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - sync ApacheModulePerl.dsp -> .mak
 
-- add HTTP_OK to Apache::Constants::EXPORT_OK
-
 - <Perl>/%Apache::ReadConfig:: brokeness (My::configure() example, Eric Cholet)
 
 - sort out =pod configuration directives
