@@ -22,7 +22,8 @@ my(@response)   = qw(DOCUMENT_FOLLOWS MOVED REDIRECT
 my(@satisfy)    = qw(SATISFY_ALL SATISFY_ANY SATISFY_NOSPEC);
 my(@remotehost) = qw(REMOTE_HOST REMOTE_NAME
 		     REMOTE_NOLOOKUP REMOTE_DOUBLE_REV);
-my(@http)       = qw(HTTP_METHOD_NOT_ALLOWED 
+my(@http)       = qw(HTTP_OK
+		     HTTP_METHOD_NOT_ALLOWED 
 		     HTTP_NOT_ACCEPTABLE 
 		     HTTP_LENGTH_REQUIRED
 		     HTTP_PRECONDITION_FAILED
